[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Michael Santo Domingo <michaelsd.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
requests = "^2.28.2"
pandas = "^2.0.0"
pyarrow = "^11.0.0"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
